@startuml
class App{
-inputFile: String
}

class Files{
-fileData: ArrayList
+getFilePath()
+fileImport()
+getFileData()
+fileOut()
}

class WordFinder{
-searchWord: String
-replaceWord: String
+searchAndReplace()
}

class KeyboardInput{
+getOutputFileName()
}

App o-- Files
App o-- WordFinder
App o-- KeyboardInput
@enduml